fix up obvious style issues for trading and portfolio rows on mobile

--- a/packages/augur-ui/src/modules/common/row.styles.less
+++ b/packages/augur-ui/src/modules/common/row.styles.less
@@ -235,9 +235,17 @@
 }
 
 @media @breakpoint-mobile-mid {
+
+  .BottomBorder {
+    > ul > li {
+      border-bottom: 0;
+    }
+  }
+
   .Row {
     grid-template-columns: repeat(3, 1fr);
     position: relative;
+    padding: @size-4 0;
 
     > li {
       > span > label {
@@ -277,9 +285,11 @@
   .SingleRow {
     border-bottom: 1px solid @color-secondary-action-outline;
     border-radius: @border-radius-default;
-    padding-bottom: @size-12;
     padding-left: @size-16;
     padding-right: @size-20;
+    min-height: unset;
+    height: unset;
+    max-height: unset;
   }
 
   .GroupRow {
@@ -290,6 +300,7 @@
   .Row2 {
     grid-template-columns: repeat(5, 1fr);
     position: relative;
+    padding: @size-4 0;
 
     > li {
       &:first-child {
@@ -354,6 +365,8 @@
 
   .Row4 {
     grid-template-columns: repeat(5, 1fr);
+    padding-left: @size-12;
+    padding-right: @size-12;
 
     &::before {
       width: 2px;
